--- a/websiteproject/firstapp/templates/firstapp/news_adding.html
+++ b/websiteproject/firstapp/templates/firstapp/news_adding.html
@@ -12,7 +12,7 @@
 {% block content %}
 <h1> Добавление новости </h1>
 
-<form action="{% url 'add_news' %}" method = "post">
+<form action="{% url 'add_news' %}" method = "post" enctype="multipart/form-data">
     {% csrf_token %}
 
         {{ form.non_field.errors }}
