Added Registration page, Authorization page, added some logic on pagination

--- a/websiteproject/templates/inc/_nav.html
+++ b/websiteproject/templates/inc/_nav.html
@@ -17,6 +17,9 @@
         </li>
       {% endif %}
       </ul>
+      <span class="navbar-text">
+        <a href="{% url 'register' %}">Регистрация</a> | <a href="{% url 'login' %}"> Авторизация</a>
+      </span>
       <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
