--- a/websiteproject/templates/base.html
+++ b/websiteproject/templates/base.html
@@ -17,16 +17,58 @@
         <div class="col-md-4">
             {% block sidebar %}SIDEBAR{% endblock %}
         </div>
+
+        <div class="col-md-9">
+            {% if messages %}
+                {% for message in messages %}
+                    {% if message.tags == 'error'%}
+                        <div class="alert alert-danger" role="alert">
+                            {{ message }}
+                        </div>
+                    {% else %}
+                            <div class="alert alert-{{ message.tags }}" role="success">
+                            </div>
+                    {% endif %}
+
+                    </div>
+                {% endfor %}
+            {% endif %}
+        </div>
+
         <div class="col-md-8">
         {% block content %} CONTENT {% endblock %}
 
             <nav aria-label="...">
               <ul class="pagination">
-                  {% for p in page_obj.paginator.page_range %}
+                   {% if page_obj.has_previous %}
                     <li class="page-item">
-                        <a class="page-link" href="?page={{ p }}"> {{ p }}</a>
+
+                        <a href="?page={{ page_obj.previous_page_number }}" class="page-link" aria-disabled="true"> Предыдущяя стр.</a>
                     </li>
+                  {% endif %}
+
+                  {% for p in page_obj.paginator.page_range %}
+
+                    {% if page_obj.number ==  p %}
+                        <li class="page-item active" aria-current="page">
+                            <a class="page-link" href="?page={{ p }}"> {{ p }}
+
+                        </a>
+                        </li>
+                    {% elif p > page_obj.number|add:-4 and p < page_obj.number|add:4 %}
+                        <li class="page-item">
+                        <a class="page-link" href="?page={{ p }}"> {{ p }}</a>
+                        </li>
+                    {% endif %}
+
+
                   {% endfor %}
+
+                  {% if page_obj.has_next %}
+                    <li class="page-item">
+                         <a href="?page={{ page_obj.next_page_number }}" class="page-link"aria-disabled="true"> След. стр.</a>
+                    </li>
+                  {% endif %}
               </ul>
             </nav>
 
