--- a/websiteproject/firstapp/templates/firstapp/login.html
+++ b/websiteproject/firstapp/templates/firstapp/login.html
@@ -14,6 +14,6 @@
 <form method = "post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit" class="btn btn-primary btn-block">Зарегистрировать</button>
+    <button type="submit" class="btn btn-primary btn-block">Авторизоваться</button>
 </form>
 {% endblock  %}
